@@ -5,10 +5,16 @@
 #define ODBCVER 0x0380
 #endif
 
+#ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
+#endif
+#ifdef HAVE_PWD_H
 #include <pwd.h>
+#endif
 #include <ltdl.h>
+#ifdef HAVE_STRING_H
 #include <string.h>
+#endif
 
 #include <sqlext.h>                     /* THIS WILL BRING IN sql.h and
                                            sqltypes.h AS WELL AS PROVIDE
