@@ -19,6 +19,7 @@
     * Generate unixodbc_conf.h using macros to allow cross compiling
     * Fix some libltdl problems 
     * Fix some naiming problems with the cursor lib
+    * Fix odbcinst problems on systems without pwd.h
 
 20th-April-2010
 2.3.0
